<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_title"
        android:background="@color/colorGrape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/txvTitle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/toolbar_title"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textSize="@dimen/dp20"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.appcompat.widget.Toolbar>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnListTypeOld"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_round20_gray_white"
        android:text="@string/listtype_oldstyle"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="@dimen/dp18"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnListTypeDefault"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_round20_orange_tomato"
        android:text="@string/listtype_default"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="@dimen/dp18"
        app:layout_constraintTop_toBottomOf="@+id/btnListTypeOld"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnListTypeMultiItem"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_round20_orange_tomato"
        android:text="@string/listtype_multi"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="@dimen/dp18"
        app:layout_constraintTop_toBottomOf="@+id/btnListTypeDefault"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnListTypeMultiPaging"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_round20_orange_tomato"
        android:text="@string/listtype_multi_paging"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="@dimen/dp18"
        app:layout_constraintTop_toBottomOf="@+id/btnListTypeMultiItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRoomAdd"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_round20_tomato_orange"
        android:text="@string/room_data_add"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="@dimen/dp18"
        app:layout_constraintTop_toBottomOf="@+id/btnListTypeMultiPaging"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnListTypeMultiRoom"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_round20_tomato_orange"
        android:text="@string/listtype_multi_room"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="@dimen/dp18"
        app:layout_constraintTop_toBottomOf="@+id/btnRoomAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnListTypeMultiRoomPaging"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_round20_darkbanana_orange"
        android:text="@string/listtype_multi_room_paging"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="@dimen/dp18"
        app:layout_constraintTop_toBottomOf="@+id/btnListTypeMultiRoom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>